--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=root
-spring.datasource.password=root
 
+#spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+spring.datasource.url=jdbc:mysql://mysqlemp.mysql.database.azure.com:3306/demo?useSSL=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=vasu
+spring.datasource.password=Lucifer_01
 # Hibernate
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
